# prefab

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: legion.rs  prefab_sample.rs  test.rs
format/: Cargo.toml
legion/: Cargo.toml
legion-prefab/: Cargo.toml
legion-prefab/examples/: simple.rs
legion-prefab/src/: clone_merge.rs  cooked_prefab.rs  cooking.rs  lib.rs  option_iter.rs  prefab_builder.rs  prefab_cooked.rs  prefab_serde.rs  prefab_uncooked.rs  registration.rs  world_serde.rs
legion-transaction/: Cargo.toml
legion-transaction/src/: clone_merge.rs  component_diffs.rs  lib.rs  option_iter.rs  transactions.rs
prefab-format/: Cargo.toml
prefab-format/examples/: legion.rs  prefab_sample.rs.inc  test.rs
prefab-format/src/: deserialize.rs  lib.rs
src/: deserialize.rs  lib.rs
