[package]
name = "prefab"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-diff = { version = "0.1", git = "https://github.com/aclysma/struct-diff" }
type-uuid = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
uuid = { version = "0.8", features = [ "serde" ] }


[dev-dependencies]
ron = "0.5"
legion = { path = "../legion" }
linkme = "0.1"