[package]
name = "legion-transaction"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefab-format = { path = "../prefab-format" }
legion-prefab = { path = "../legion-prefab" }
serde = { version = "1", default-features = false, features = [ "derive" ] }
erased-serde = "0.3"
legion = { git = "https://github.com/kabergstrom/legion", default-features = false, features = ["serialize"], branch="clone_move_rebased" }
uuid = { version = "0.8", default-features = false, features = [ "v4" ] }
log="0.4"
# We need this PR (https://github.com/servo/bincode/pull/288) but it's not published yet
#bincode = "1.2"
bincode = { git = "https://github.com/servo/bincode.git", rev="e30e91e3a" }