[package]
name = "legion-transaction"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefab-format = { path = "../prefab-format" }
legion-prefab = { path = "../legion-prefab" }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
erased-serde = "0.3.13"
legion = { version = "0.3.1", default-features = false, features = ["serialize"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
log = "0.4.11"
# We need this PR (https://github.com/servo/bincode/pull/288) but it's not published yet
bincode = "1.3.1"
