[package]
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
name = "prefab-format"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
serde-diff = "0.4.0"
type-uuid = "0.1.2"
uuid = { version = "0.8.1", features = ["serde"] }

[dev-dependencies]
atelier-core = { git = "https://github.com/radium-io/atelier-assets", rev = "a06899a048b6886fa7db93dbbd457fba2f8af0a3", features = ["asset_uuid_macro"] }
erased-serde = "0.3.13"
legion = { version = "0.3.1", default-features = false, features = ["serialize"] }
linkme = "0.2.3"
ron = "0.6.4"
